# game-TBD

./: .gitattributes  .gitignore  .luacheckrc  CONTRIBUTING.md  COPYING  LICENSE-APACHE  PLAN-2.7-dependency-upgrade.md  PLAN.md  README.md  config.ld  stylua.toml  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  coverage.yml  release.yml
assets/models/arknights_endfield_-last_rite-_unity_export/: license.txt  scene.gltf
assets/models/fox-eared_game_endfield/: license.txt  scene.gltf
assets/models/zhuang_fangyi__arknights_endfield/: license.txt  scene.gltf
docs/: MOD_API.md  asset-pipeline.md  build-optimization.md  debug-console.md  engine-design.md  lua-api.md  mod-system.md  template-system.md
engine/: .clippy.toml  Cargo.toml  rustfmt.toml
engine/.cargo/: config.toml
engine/benches/: loading_bench.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: lib.rs
engine/src/: asset_manager.rs  constants.rs  font_center.rs  lib.rs  main.rs  utils.rs
engine/src/components/: mod.rs
engine/src/core/: mod.rs
engine/src/lua_api/: mod.rs  runtime.rs
engine/src/plugins/: camera_plugin.rs  debug_console_plugin.rs  hot_reload_plugin.rs  log_plugin.rs  lua_command_plugin.rs  mod.rs  player_plugin.rs  scene_plugin.rs
engine/src/resources/: mod.rs
engine/tests/: asset_manifest_test.rs  core_test.rs  integration_test.rs  lua_api_test.rs
engine/tests/fixtures/: test_config.lua  test_entities.lua  test_errors.lua
game/: config.toml  main.lua
game/config/: camera.lua  colors.lua  game.lua  player.lua  scenes.lua
game/tests/: test_config.lua  test_game_logic.lua
tests/: README.md
tools/: README.md
tools/scripts/: clean-all.sh  quick-test.sh
