# =============================================================================
# 明朝修仙 RPG - 引擎配置
# 基于 Bevy 0.14 构建
# =============================================================================

[package]
name = "ming-rpg"
version = "0.1.0"
edition = "2024"
authors = ["Yuki <2622126521@qq.com>"]
description = "明朝修仙 RPG - 蝴蝶效应人生模拟"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/ming-rpg"

[workspace]
members = ["crates/*"]

# =============================================================================
# 依赖项
# =============================================================================

[dependencies]
# 核心引擎框架
bevy = { version = "0.18", features = ["png", "jpeg", "webp"] }

# 3D 物理引擎
bevy_rapier3d = "0.33"

# Lua 脚本支持
mlua = { version = "0.11.6", features = ["lua55", "vendored", "serde"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2.0.18"
anyhow = "1.0.102"

# 工具库
chrono = "0.4"          # 时间处理（游戏内日期）
rand = "0.9"            # 随机数
hashbrown = "0.16.1"    # 高性能 HashMap
uuid = { version = "1.16", features = ["v4"] }   # 实体ID生成
rkyv = { version = "0.8.15", features = ["bytecheck", "uuid-1", "hashbrown-0_15"] }  # 零拷贝二进制序列化（Lua Actor 通信）
lru = "0.16.3"          # LRU 缓存（资源管理）

# UI 框架
bevy_egui = { version = "0.39", features = ["default_fonts"] }

# 开发模式依赖
notify = { version = "8.2.0", optional = true }       # 文件监听（热重载）

# =============================================================================
# 特性标志
# =============================================================================

[features]
default = []
hot-reload = ["notify"]    # Lua热重载
dev-tools = ["hot-reload"]  # 完整开发工具集

# =============================================================================
# 开发依赖
# =============================================================================

[dev-dependencies]
pretty_assertions = "1.4"    # 测试输出美化
criterion = { version = "0.5", features = ["html_reports"] }  # 基准测试
tempfile = "3.10"            # 临时文件（测试用）

# =============================================================================
# 编译配置：开发模式（最快的编译速度）
# -----------------------------------------------------------------------------
# 与 .cargo/config.toml 中的增量编译、sccache配合使用
# =============================================================================

[profile.dev]
# 零优化 = 最快编译速度（当前crate）
opt-level = 0
# 最大并行度 = 更快编译
codegen-units = 256
# 禁用链接时优化 = 更快链接
lto = false
# 仅行号表 = 较小体积 + 仍可调试
debug = 1

[profile.dev.package."*"]
# 依赖项轻微优化（平衡编译速度和运行时性能）
opt-level = 1
codegen-units = 256

# =============================================================================
# 编译配置：发布模式（最佳运行时性能）
# =============================================================================

[profile.release]
opt-level = 3           # 最高优化级别
lto = "thin"            # 链接时优化
strip = true            # 去除符号表，减小体积
codegen-units = 16      # 减少并行度，优化更好

[profile.releasedbg]
inherits = "release"
strip = false           # 保留符号表，用于调试

# =============================================================================
# 编译配置：WASM 发布（最小体积）
# =============================================================================

[profile.wasm-release]
inherits = "release"
opt-level = "z"         # 体积优先
lto = "fat"             # 全链接时优化

[[bench]]
name = "loading_bench"
harness = false
